5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1834_1278.log
== TEST (2019-07-01 20:23:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while (x =! -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((yu/111) - 1)
	a =+ m[x,y]
	x = y
print(a)
-- ERROR:
File "XXXX", line 6
    while (x =! -1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:24:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while (x != -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((yu/111) - 1)
	a =+ m[x,y]
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:24:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while (x != -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((y/111) - 1)
	a =+ m[x,y]
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:25:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while (x != -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((y/111) - 1)
	a = a + m[x,y]
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:25:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while (x != -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((y/111) - 1)
	a = a + m[x,y]
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:26:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while not(x == -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((y/111) - 1)
	a = a + m[x,y]
	print(a)
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
a = 0
while not(x == -1):
	y = int(input("Digite: "))
	x = int((x/111) - 1)
	y = int((y/111) - 1)
	a = a + m[x,y]
	print(m[x,y])
	print(a)
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:30:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
x = int((x/111) - 1)
a = 0
while not(x == -1):
	y = int(input("Digite: "))
	y = int((y/111) - 1)
	a = a + m[x,y]
	print(m[x,y])
	print(a)
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:31:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
x = int((x/111) - 1)
a = 0
while (x != -1):
	y = int(input("Digite: "))
	y = int((y/111) - 1)
	print(y)
	a = a + m[x,y]
	x = y
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:35:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
x = int((x/111) - 1)
a = 0
while (x != -1):
	y = int(input("Digite: "))
	y = int((y/111) - 1)
	if (y != -1):
		a = a + m[x,y]
	x = y
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:35:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
x = int(input("Digite: "))
x = int((x/111) - 1)
a = 0
while (x != -1):
	y = int(input("Digite: "))
	y = int((y/111) - 1)
	if (y != -1):
		a = a + m[x,y]
	x = y
print(a)

-- EXECUTION TIME:
1.21887
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
